--- a/06_Ch_7_Dynamics/085-Inhomog_sys.ipynb
+++ b/06_Ch_7_Dynamics/085-Inhomog_sys.ipynb
@@ -104,13 +104,15 @@
     "\n",
     "This is the last piece we needed to write the general solution to the inhomogeneous initial value problem.\n",
     "\n",
-    ":::{prf:theorem}\n",
+    ":::{prf:theorem} The solution to an inhomogeneous linear ODE\n",
     ":label: inhom_soln_thm\n",
-    "The solution to the initial value problem\n",
+    "The solution to the initial value problem $\\dot{\\vv x} = A\\vv x + \\vv f$ with initial conditions $\\vv x(t_0) = \\vv b$ is\n",
     "\\begin{equation}\n",
     "\\label{inhom_soln_eqn}\n",
-    "\\dot{\\vv x} = A\\vv x + \\vv f, \\quad \\vv x(t_0) = \\vv b \\quad \\text{is} \\quad \\vv x(t) = e^{(t-t_0)A}\\vv b + \\int_{t_0}^t e^{(t-\\tau)A}f(\\tau)d\\tau\n",
+    "\\vv x(t) = e^{(t-t_0)A}\\vv b + \\int_{t_0}^t e^{(t-\\tau)A}f(\\tau)d\\tau.\n",
     "\\end{equation}\n",
+    "\n",
+    "Here, $e^{(t - t_0) A}\\vv b$ is the solution to the homogeneous system $\\dot{\\vv x} = A \\vv x$ with the initial conditions $\\vv x(t_0) = \\vv b$; and $\\int_{t_0}^t e^{(t-\\tau)A}f(\\tau)d\\tau$ is the solution to the inhomogeneous system $\\dot{\\vv x} = A\\vv x + \\vv f$ with initial conditions $\\vv x(t_0) = \\vv 0$ (we proved this above). Adding the two will yield a solution satisfying both the initial conditions $\\vv x(t_0) = \\vv b$ as well as the equality $\\dot{\\vv x} = A \\vv x + \\vv f$.\n",
     ":::\n"
    ]
   },
@@ -118,9 +120,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    ":::{prf:example} A $2\\times 2$ inhomogeneous system (ALA Example 10.36)\n",
+    ":label: inhomogeneous-ex1\n",
     "\n",
+    "In this example, we'll solve a $2\\times 2$ inhomogeneous system using the theorem we just proved:\n",
     "\n",
-    "**TO DO** Please transcribe Example 10.36, but replace u with x for notation, and compute $e^{At}$ via diagonalization. Make sure to highlight $f(t) = \\begin{bmatrix} 0 \\\\ e^t \\end{bmatrix}$\n"
+    "$$\n",
+    "\\dot x_1 &= 2x_1 - x_2,\\\\ \n",
+    "\\dot x_2 &= 4x_1 - 3x_2 + e^t\n",
+    "$$\n",
+    "\n",
+    "with initial conditions $x_1(0) = 1, x_2(0) = 0$. We can rewrite this sytem as\n",
+    "\n",
+    "$$\\label{expr:DifferentialEquality}\n",
+    "\\dot{\\vv x} = \\bm 2 & -1\\\\4 & -3 \\em \\vv x + \\bm 0 \\\\ e^t \\em := A\\vv x + f(t)\n",
+    "$$\n",
+    "\n",
+    "Recall that solving this system proceeds in two steps: first, we solve the homogeneous system $\\dot{\\vv x} = A\\vv x$ with initial conditions $\\vv {x}(0) = \\bm 1\\\\0\\em$; second, we find a particular solution to the inhomogeneous system $\\dot{\\vv x} = A\\vv x + \\vv f$ with initial conditions $\\vv x(0) = \\vv 0$. \n",
+    "\n",
+    "First, recall that the solution to the homogenous system with initial conditions $\\bm 1\\\\0\\em$ is found using the matrix exponential,\n",
+    "\n",
+    "$$\n",
+    "\\vv z(t) = e^{At}\\bm 1\\\\0 \\em\n",
+    "$$\n",
+    "\n",
+    "Solving for the eigenvalues and eigenvectors of $A$, we find that $A$ has\n",
+    "\n",
+    "$$\n",
+    "\\lambda_1 = -2, \\quad \\vv{v_1} = \\bm 1\\\\4\\em,\\\\\n",
+    "\\lambda_2 = 1, \\quad \\vv{v_2} = \\bm 1\\\\1\\em.\n",
+    "$$\n",
+    "\n",
+    "Hence $A$ is diagonalizable as $\\bm 1&1\\\\4&1 \\em \\bm -2 &0\\\\0&1\\em \\bm 1&1\\\\4&1\\em^{-1}$. Recall from our cases for the matrix exponential that this implies that $e^{At} = \\bm 1&1\\\\4&1 \\em \\bm e^{-2t} &0\\\\0&e^t\\em \\bm 1&1\\\\4&1\\em^{-1}$, and hence\n",
+    "\n",
+    "$$\n",
+    "\\vv z(t) = \\bm 1&1\\\\4&1 \\em \\bm e^{-2t} &0\\\\0&e^t\\em \\bm 1&1\\\\4&1\\em^{-1}\\bm 1\\\\0 \\em = \\bm \\frac 4 3 e^t - \\frac 1 3 e^{-2t} \\\\ \\frac 4 3 e^t - \\frac 4 3 e^{-2t} \\em.\n",
+    "$$\n",
+    "\n",
+    "Second, the solution to the inhomogeneous solution with initial conditions $\\vv 0$ is given by\n",
+    "\n",
+    "$$\n",
+    "\\vv{x^*}(t) &= \\int_{0}^{t}{e^{A(t - \\tau)}f(\\tau)\\ d\\tau}\\\\\n",
+    "&= \\int_{0}^{t}{\\bm 1&1\\\\4&1 \\em \\bm e^{-2(t - \\tau)} &0\\\\0&e^{t - \\tau}\\em \\bm 1&1\\\\4&1\\em^{-1}\\bm 0\\\\e^\\tau \\em \\ d\\tau}\\\\\n",
+    "&= \\int_{0}^{t}{\\bm -\\frac 1 3 e^t + \\frac 1 3 e^{-2t + 3\\tau} \\\\ -\\frac 1 3 e^t + \\frac 4 3 e^{-2t + 3\\tau} \\em \\ d\\tau}\\\\\n",
+    "&= \\bm -\\frac 1 3 te^{t} + \\frac 1 9 (e^{t} - e^{-2t}) \\\\ -\\frac 1 3 te^t + \\frac 4 9 (e^t - e^{-2t}) \\em.\n",
+    "$$\n",
+    "\n",
+    "By our [theorem](#inhom_soln_thm) for the solution to an inhomogeneous linear ODE, the solution to $\\dot{x} = A\\vv x + \\vv f$ with initial conditions $\\bm 1\\\\0\\em$ is the sum $\\vv{x^*}(t) + \\vv z(t)$,\n",
+    "\n",
+    "$$\n",
+    "\\vv x(t) = \\bm -\\frac 1 3 te^t + \\frac {13}{9} e^t - \\frac 4 9 e^{-2t} \\\\ -\\frac 1 3 te^t + \\frac {16}{9} e^t - \\frac{16}{9}e^{-2t}\\em.\n",
+    "$$\n",
+    "\n",
+    ":::"
    ]
   },
   {
