--- a/04_Ch_5_Linearity/062-Linear_transforms.ipynb
+++ b/04_Ch_5_Linearity/062-Linear_transforms.ipynb
@@ -110,7 +110,7 @@
     "$$\n",
     "which has the effect of first rotating a vector $90^o$ counter clockwise about the origin, and then translating the vector by $(1, −2)$.\n",
     "\n",
-    ":::::{note} INTUITION\n",
+    ":::::{note} Intuition\n",
     "You should think of linear functions as defining \"lines through the origin\" wheres affine functions define \"lines with an offset\". This intuition on $\\mathbb{R}^2$ is illustrated below.\n",
     "\n",
     ":::{figure}../figures/06-linear_lines.jpg\n",
@@ -171,7 +171,105 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## TO DO: Rviz/pybullet, move a camera and robotic arm around"
+    "#### Move a Robot Manipulator and a Camera\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "pybullet build time: Oct 14 2023 15:44:17\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pybullet as p\n",
+    "import pybullet_data\n",
+    "import time\n",
+    "\n",
+    "# Connect to PyBullet\n",
+    "physicsClient = p.connect(p.GUI)\n",
+    "\n",
+    "# Set the search path to find the URDF files\n",
+    "p.setAdditionalSearchPath(pybullet_data.getDataPath())\n",
+    "\n",
+    "# Load plane and mobile base\n",
+    "planeId = p.loadURDF(\"plane.urdf\")\n",
+    "baseId = p.loadURDF(\"r2d2.urdf\", basePosition=[0, 0, 0], useFixedBase=False)\n",
+    "\n",
+    "# Load robotic arm and position it on top of the mobile base\n",
+    "robotId = p.loadURDF(\"kuka_iiwa/model.urdf\", basePosition=[-0.1, 0, 0.4], useFixedBase=True)\n",
+    "\n",
+    "# Set gravity\n",
+    "p.setGravity(0, 0, -9.8)\n",
+    "\n",
+    "# Create sliders for camera control\n",
+    "camera_x = p.addUserDebugParameter(\"camera_x\", -10, 10, 0)\n",
+    "camera_y = p.addUserDebugParameter(\"camera_y\", -10, 10, 0)\n",
+    "camera_z = p.addUserDebugParameter(\"camera_z\", -10, 10, 1)\n",
+    "camera_yaw = p.addUserDebugParameter(\"camera_yaw\", -180, 180, 0)\n",
+    "camera_pitch = p.addUserDebugParameter(\"camera_pitch\", -90, 90, -30)\n",
+    "\n",
+    "# Create sliders for mobile base control\n",
+    "base_x = p.addUserDebugParameter(\"base_x\", -10, 10, 0)\n",
+    "base_y = p.addUserDebugParameter(\"base_y\", -10, 10, 0)\n",
+    "base_yaw = p.addUserDebugParameter(\"base_yaw\", -180, 180, 0)\n",
+    "\n",
+    "# Create sliders for robotic arm joints\n",
+    "joint_positions = []\n",
+    "num_joints = p.getNumJoints(robotId)\n",
+    "for i in range(num_joints):\n",
+    "    info = p.getJointInfo(robotId, i)\n",
+    "    joint_positions.append(p.addUserDebugParameter(f'Joint {info[1].decode(\"utf-8\")}', -3.14, 3.14, 0))\n",
+    "\n",
+    "# Main loop\n",
+    "while True:\n",
+    "    # Read camera parameters\n",
+    "    cam_x = p.readUserDebugParameter(camera_x)\n",
+    "    cam_y = p.readUserDebugParameter(camera_y)\n",
+    "    cam_z = p.readUserDebugParameter(camera_z)\n",
+    "    cam_yaw = p.readUserDebugParameter(camera_yaw)\n",
+    "    cam_pitch = p.readUserDebugParameter(camera_pitch)\n",
+    "    \n",
+    "    # Set the camera position and orientation\n",
+    "    p.resetDebugVisualizerCamera(cameraDistance=2, cameraYaw=cam_yaw, cameraPitch=cam_pitch, cameraTargetPosition=[cam_x, cam_y, cam_z])\n",
+    "    \n",
+    "    # Read base parameters\n",
+    "    base_x_pos = p.readUserDebugParameter(base_x)\n",
+    "    base_y_pos = p.readUserDebugParameter(base_y)\n",
+    "    base_yaw_angle = p.readUserDebugParameter(base_yaw)\n",
+    "    \n",
+    "    # Set the base position and orientation\n",
+    "    p.resetBasePositionAndOrientation(baseId, [base_x_pos, base_y_pos, 0], p.getQuaternionFromEuler([0, 0, base_yaw_angle]))\n",
+    "    \n",
+    "    # Get base orientation and position\n",
+    "    base_position, base_orientation = p.getBasePositionAndOrientation(baseId)\n",
+    "    \n",
+    "    # Compute the new position for the robot arm\n",
+    "    new_robot_position = [base_position[0]-0.1, base_position[1], base_position[2] + 0.4]\n",
+    "    \n",
+    "    # Set the new position and orientation for the robot arm\n",
+    "    p.resetBasePositionAndOrientation(robotId, new_robot_position, base_orientation)\n",
+    "\n",
+    "    # Read and set robotic arm joint positions\n",
+    "    for i in range(num_joints):\n",
+    "        joint_position = p.readUserDebugParameter(joint_positions[i])\n",
+    "        p.setJointMotorControl2(bodyUniqueId=robotId, jointIndex=i, controlMode=p.POSITION_CONTROL, targetPosition=joint_position)\n",
+    "    \n",
+    "    # Step the simulation\n",
+    "    p.stepSimulation()\n",
+    "    \n",
+    "    # Sleep for a while to slow down the simulation\n",
+    "    time.sleep(0.01)\n",
+    "\n",
+    "# Disconnect from PyBullet\n",
+    "p.disconnect()"
    ]
   },
   {
