--- a/07_Ch_8_Iteration/093-Random_Walks.ipynb
+++ b/07_Ch_8_Iteration/093-Random_Walks.ipynb
@@ -150,7 +150,7 @@
     "\n",
     "$$\n",
     "& \\quad \\quad  \\begin{matrix}1 & 2 & \\ 3 & 4 & 5 & 6 & 7 \\end{matrix} \\\\\n",
-    "P_{*} = \\begin{bmatrix}\n",
+    "P_{*} &= \\begin{bmatrix}\n",
     "0 & \\frac{1}{2} & 0 & \\frac{1}{7} & 0 & 0 & \\frac{1}{7} \\\\\n",
     "0 & 0 & \\frac{1}{3} & \\frac{1}{7} & \\frac{1}{2} & 0 & \\frac{1}{7} \\\\\n",
     "1 & 0 & 0 & \\frac{1}{7} & 0 & \\frac{1}{3} & \\frac{1}{7} \\\\\n",
@@ -229,9 +229,12 @@
     "Thus, we can rank the pages in terms of descending importance as: 3, 2, 6, 5, 1, 4, 7.\n",
     "\n",
     ":::{note}\n",
-    "The Google matrix for the world wide web has over 8 billion rows and columns, and computing $\\vv x^* = G \\vv x^*$ is a very non-trivial task. An iterative approach known as the power method is used in practice, and typically takes several days for Google to compute a new $\\vv x^*$, which it does every month. \n",
+    "The Google matrix for the world wide web has over 8 billion rows and columns, and computing $\\vv x^* = G \\vv x^*$ is a very non-trivial task. An iterative approach known as the _power method_ is used in practice, and typically takes several days for Google to compute a new $\\vv x^*$, which it does every month. \n",
     "\n",
-    "**TO DO**: accessible links to power method description\n",
+    "Some resources for the power method:\n",
+    "\n",
+    "1. https://www.mpp.mpg.de/~jingliu/ECPI/PowerMethodProof.pdf\n",
+    "2. https://en.wikipedia.org/wiki/Power_iteration\n",
     ":::"
    ]
   },
