dumped half of lec 20

--- a/10_Ch_11_PCA_Apps/121-Apps.ipynb
+++ b/10_Ch_11_PCA_Apps/121-Apps.ipynb
@@ -416,6 +416,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "What are the Missing Entries?\n",
+    "\n",
+    "Suppose that I run a web streaming service for movies for two of my friends, Amy, Bob, and Carol. It's a very special web movie service for the sci-fi movie lovers. The Movies: Inception, Star Wars Episode 1, Moana, and Inside Out. After 1 month, we ask our friends Amy, Bob, and Carol to rate the movies they've watched. Here are the results. We collect their ratings into a table below (we only allowed movies with 1-5):\n",
+    "\n",
+    "\\begin{tabular}{|c|c|c|c|c|c|}\n",
+    "\\hline\n",
+    " & The Matrix & Inception & Star Wars Ep.1 & Moana & Inside Out \\\\\n",
+    "\\hline\n",
+    "Amy & 9 & ? & ? & ? & 5 \\\\\n",
+    "Bob & ? & 3 & ? & ? & 2 \\\\\n",
+    "Carol & ? & ? & 2 & 1 & 1 \\\\\n",
+    "\\hline\n",
+    "\\end{tabular}\n",
+    "\n",
+    "Carol was asked to provide recommendations to Amy, Bob, and Carol as to which movie they should watch next. Said another way, we are asked to fill in the unknown ? ratings in the table above.\n",
+    "\n",
+    "This seems a bit unfair! Each of the unknown entries could be any value in 1-5 after all! But what if I told you an additional hint: Amy, Bob, and Carol have the same relative preferences for each movie. For example, Amy likes Inside Out 5 more than Bob likes Inside Out, and this ratio is the same across all movies. Furthermore, we are making the assumption that all columns of the table have a.e. multiples of each other.\n",
+    "\n",
+    "Thus we can conclude that Bob likes the Matrix $\\frac{9}{5} \\cdot (Amy's rating) = 4$. Similarly, Carol's rating of Inception is $\\frac{3}{2} \\cdot (Bob's rating) = 1.5$, Carol's rating of Inside Out is $\\frac{5}{2} \\cdot (Bob's rating) = 1$, and so on. Here's the completed matrix:\n",
+    "\n",
+    "\\[\n",
+    "M = \\begin{bmatrix}\n",
+    "9 & 7.5 & 10 & 5 & 5 \\\\\n",
+    "4 & 3 & 4 & 2 & 2 \\\\\n",
+    "1.8 & 1.5 & 2 & 1 & 1\n",
+    "\\end{bmatrix}\n",
+    "\\]\n",
+    "\n",
+    "The point of this example is that when you know something about the structure of a partially known matrix, then sometimes it is possible to intelligently fill in missing entries. In this perhaps example, the assumption that every column is a scalar multiple of every other column (one column ($\\propto$) every other column) is pretty extreme!\n",
+    "\n",
+    "One natural and useful definition is that assuming a matrix $M$ has low-rank, that rank counts as \"how\" it approximates dependency but it typically means that for a matrix $M \\in \\mathbb{R}^{m \\times n}$, that rank $M \\ll \\min\\{m,n\\}$.\n",
+    "\n",
+    "This lecture will explore how we can use this idea of structure to solve the matrix completion problem by finding the best low-rank approximation to a partially known matrix. The SVD will of course be our main tool."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/10_Ch_11_PCA_Apps/121-Apps.ipynb)\n"
    ]
   }
