some NumPy in chapter 7

--- a/06_Ch_7_Dynamics/083-Matrix_exponential.ipynb
+++ b/06_Ch_7_Dynamics/083-Matrix_exponential.ipynb
@@ -340,6 +340,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "from scipy.linalg import eigh\n",
+    "\n",
+    "A = np.array([[6, 2],\n",
+    "              [-2, 6]])\n",
+    "eigvals, eigvecs = eigh(A)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4., 8.])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eigvals"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
