--- a/06_Ch_7_Dynamics/082-rep_eig_jord_LDS.ipynb
+++ b/06_Ch_7_Dynamics/082-rep_eig_jord_LDS.ipynb
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Repeated Eigenvalues, Jordan Forms, and Linear Dynamical Systems\n",
+    "## Repeated Eigenvalues\n",
     "\n",
     "Let's revisit the matrix $A = \\begin{bmatrix} 2 & 1 \\\\ 0 & 2 \\end{bmatrix}$ we saw in the previous lecture. This matrix has an eigenvalue $\\lambda = 2$ of algebraic multiplicity 2: ($\\det(A-\\lambda I) = (\\lambda-2)^2 = 0$ $\\Leftrightarrow \\lambda_1 = \\lambda_2 = 2$) but geometric multiplicity 1, i.e., only one linearly independent eigenvector\n",
     "$$\n",
@@ -177,9 +177,9 @@
     "One solution is $\\mathbf{v}_2 = \\begin{bmatrix} 0 \\\\ 1 \\end{bmatrix}$. We construct our similarity transformation as before, and set $V = \\bm \\mathbf{v}_1 & \\mathbf{v}_2 \\em = \\begin{bmatrix} 1 & 0 \\\\ 1 & 1 \\end{bmatrix}$, and compute $V^{-1} = \\begin{bmatrix} 1 & 0 \\\\ -1 & 1 \\end{bmatrix}$\n",
     "\n",
     "Let's see what happens if we compute $V^{-1}AV$. In the complete case, this would give us a diagonal matrix. In this case, we get\n",
-    "$$\n",
+    "\\begin{align*}\n",
     "\\begin{bmatrix} 1 & 0 \\\\ -1 & 1 \\end{bmatrix}\\begin{bmatrix} 1 & 1 \\\\ -1 & 3 \\end{bmatrix}\\begin{bmatrix} 1 & 0 \\\\ 1 & 1 \\end{bmatrix} = \\begin{bmatrix} 2 & 1 \\\\ 0 & 2 \\end{bmatrix},\n",
-    "$$\n",
+    "\\end{align*}\n",
     "\n",
     "which we'll recognize as our previous example! It turns out that **all** $2 \\times 2$ matrices with $\\lambda=2$ having algebraic multiplicity 2 and geometric multiplicity 1 are similar to the _Jordan Block_\n",
     "\n",
@@ -220,6 +220,68 @@
     ":::{note}\n",
     "This is a very specific instantiation of the Jordan Canonical Form of a matrix. You will learn more about the Jordan Canonical Form and its implications on differential equations in ESE 2100. For those interested in the fully general theorem statement, see ALA 8.6, Theorem 8.51.\n",
     ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Python break! TO CHECK\n",
+    "\n",
+    "In the below code, we use the linear algebra library of `SciPy` to compute the eigenvalues and the eigenvectors (generalized) of a matrix and compare it with those computed using `NumPy`. Notice the difference between both the libraries and find the one which returns the generalized eigenvectors."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eigenvectors (generalized) using scipy:\n",
+      "  [[ 1.00000000e+00 -1.00000000e+00]\n",
+      " [ 0.00000000e+00  6.66133815e-16]]\n",
+      "Eigenvectors using numpy:\n",
+      " [[ 1.0000000e+00 -1.0000000e+00]\n",
+      " [ 0.0000000e+00  4.4408921e-16]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# import numpy as np\n",
+    "# from scipy.linalg import eig\n",
+    "\n",
+    "# A = np.array([[2, 1],\n",
+    "#               [0, 2]])\n",
+    "\n",
+    "# eigvals, eigvecs = eig(A, np.eye(A.shape[0])) # Using scipy\n",
+    "\n",
+    "# evals, evecs = np.linalg.eig(A) # Using numpy\n",
+    "\n",
+    "# print(\"Eigenvectors (generalized) using scipy:\\n \", eigvecs)\n",
+    "# print(\"Eigenvectors using numpy:\\n\", evecs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2+0j)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eigvecs"
    ]
   },
   {
