finished dumping lec 20 and started 21

--- a/10_Ch_11_PCA_Apps/122-Low_Rank.ipynb
+++ b/10_Ch_11_PCA_Apps/122-Low_Rank.ipynb
@@ -237,6 +237,110 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\\text{The non-compact SVD of M (which keeps zero singular values around)}\n",
+    "\n",
+    "\\text{Our goal is to find a rank k matrix } \\hat{M} \\text{ which minimizes } \\|\\hat{M} - M\\|_F^2. \\text{ Let}\n",
+    "M = U \\Sigma V^T \\text{ be the SVD of M, where } U, \\Sigma, V \\in \\mathbb{R}^{n\\times n} \\text{ since rank}M=n. \\text{ By properties}\n",
+    "\\text{of the Frobenius norm, we then have the following sequence of equalities:}\n",
+    "\n",
+    "\\|\\hat{M} - M\\|_F^2 = \\|\\hat{M} - U \\Sigma V^T\\|_F^2 \\\\\n",
+    "= \\|(U^T(\\hat{M} - U \\Sigma V^T))\\|_F^2 \\quad (\\|AB\\|_F = \\|BA\\|_F) \\\\\n",
+    "= \\|U^T\\hat{M} - \\Sigma V^T\\|_F^2 \\quad (U^TU = I) \\\\\n",
+    "= \\|(U^T\\hat{M} - \\Sigma V^T)V\\|_F^2 \\quad (\\|A\\|_F = \\|AG\\|_F) \\\\\n",
+    "= \\|U^T\\hat{M}V - \\Sigma\\|_F^2 \\quad (V^TV = I)\n",
+    "\n",
+    "\\text{Now notice that since } \\Sigma \\text{ is a diagonal matrix, any non-diagonal entry in } U^T\\hat{M}V\n",
+    "\\text{adds to our approx error, so } U^T\\hat{M}V \\text{ should be diagonal. Let's postfix } U^TV^T \\text{ to some}\n",
+    "\\text{diagonal matrix } D. \\text{ Then}\n",
+    "\n",
+    "\\|\\hat{M} - M\\|_F^2 = \\|U^T(UDV^T)V - \\Sigma\\|_F^2 = \\|D - \\Sigma\\|_F^2 = \\sum_{i=1}^n (d_{ii} - \\sigma_{ii})^2. \\quad (*)\n",
+    "\n",
+    "\\text{Therefore, we want to pick the diagonal entries } d_{ii} \\text{ to minimize the right-hand}\n",
+    "\\text{expression in (*). If there was no rank restriction on } \\hat{M}, \\text{ we simply would set } d_{ii} = \\sigma_{ii}.\n",
+    "\\text{However, since } \\hat{M} = UDV^T \\text{ is our SVD of } \\hat{M}, \\text{ therefore, for } \\hat{M} \\text{ to be rank k, only}\n",
+    "k \\text{ of the } d_{ii} \\text{ can be nonzero. If we can only knock off k of the } (d_{ii} - \\sigma_{ii})^2 \\text{ terms in (*),}\n",
+    "\\text{we should pick the top k, i.e., } d_{ii} = \\sigma_{ii} \\text{ for } i = 1, \\ldots, k, \\text{ and } d_{ii} = 0 \\text{ for } i = k+1, \\ldots, n.\n",
+    "\n",
+    "\\text{Then, } \\hat{M} = [u_1 \\ldots u_k u_{k+1} \\ldots u_n] \\begin{bmatrix}\n",
+    "\\sigma_1 & & & \\\\\n",
+    "& \\ddots & & \\\\\n",
+    "& & \\sigma_k & \\\\\n",
+    "& & & 0 \\\\\n",
+    "& & & & \\ddots \\\\\n",
+    "& & & & & 0\n",
+    "\\end{bmatrix} \\begin{bmatrix}\n",
+    "v_1^T \\\\\n",
+    "\\vdots \\\\\n",
+    "v_k^T \\\\\n",
+    "v_{k+1}^T \\\\\n",
+    "\\vdots \\\\\n",
+    "v_n^T\n",
+    "\\end{bmatrix} = \\sum_{i=1}^k \\sigma_i u_i v_i^T\n",
+    "\n",
+    "\\text{is exactly the expression in (SVD-k), and the} \\sqrt{\\text{approximation error it incurs is}}\n",
+    "\n",
+    "\\|\\hat{E}\\|_F^2 = \\|\\hat{M} - M\\|_F^2 = \\sum_{i=k+1}^n \\sigma_i^2,\n",
+    "\n",
+    "\\text{i.e. the sum of the squares of the \"tail\" singular values of } M.\n",
+    "\n",
+    "\\text{Example: Recall the matrix } A = \\begin{bmatrix}\n",
+    "4 & 4 & 4 \\\\\n",
+    "3 & 7 & -2\n",
+    "\\end{bmatrix} \\text{ from Lecture 18, we computed its SVD as:}\n",
+    "\n",
+    "A = \\frac{3}{10} \\sqrt{10} \\begin{bmatrix}\n",
+    "1 & 1 \\\\\n",
+    "\\sqrt{10} & -\\sqrt{10}\n",
+    "\\end{bmatrix} \\begin{bmatrix}\n",
+    "\\sqrt{10} & 0 \\\\\n",
+    "0 & 3\\sqrt{10}\n",
+    "\\end{bmatrix} \\begin{bmatrix}\n",
+    "1/3 & 2/3 & 2/3 \\\\\n",
+    "-2/3 & -1/3 & 2/3\n",
+    "\\end{bmatrix} = U \\Sigma V^T.\n",
+    "\n",
+    "A \\text{ is rank 2, and its rank 1 approximation is, according to (SVD-k), given by}\n",
+    "\n",
+    "\\hat{A}_1 = \\begin{bmatrix}\n",
+    "3/\\sqrt{10} \\\\\n",
+    "\\sqrt{10}\n",
+    "\\end{bmatrix} 6\\sqrt{10} \\begin{bmatrix}\n",
+    "1/3 & 2/3 & 2/3\n",
+    "\\end{bmatrix} = \\begin{bmatrix}\n",
+    "6 & 12 & 12 \\\\\n",
+    "2 & 4 & 4\n",
+    "\\end{bmatrix}\n",
+    "\n",
+    "\\text{If we compute } \\|\\hat{A}_1 - A\\|_F^2 \\text{ we get:}\n",
+    "\n",
+    "\\left\\|\\begin{bmatrix}\n",
+    "2 & -1 & 2 \\\\\n",
+    "-6 & -3 & 6\n",
+    "\\end{bmatrix}\\right\\|_F^2 = 2^2 + (-1)^2 + 2^2 + (-6)^2 + (-3)^2 + 6^2 \\\\\n",
+    "= 90\n",
+    "\n",
+    "\\text{which is exactly } \\sigma_2^2 = (3\\sqrt{10})^2 = 90.\n",
+    "\n",
+    "\\text{Finally, we address an obvious question when applying these ideas in practice: how should we}\n",
+    "\\text{pick the rank k of our approximation?}\n",
+    "\n",
+    "\\text{In a perfect world, the singular values of the original data matrix will give strong}\n",
+    "\\text{guidance: if the top few singular values are much larger than the rest, then the obvious solution}\n",
+    "\\text{is to take k = \\# of big values. This was the case in the handset example last class:}\n",
+    "\\text{the 1st singular value was significantly larger than others, suggesting a rank 1 approximation}\n",
+    "\\text{would be a good choice (which was the image (d)).}\n",
+    "\n",
+    "\\text{In less clear settings, the rule of thumb is to take k as small as possible while}\n",
+    "\\text{still providing a \"useful\" approximation of the original data. For example, it is common}\n",
+    "\\text{to choose k so that the sum of the top k singular values is at least c times}\n",
+    "\\text{larger than the sum of the other singular values. The ratio c is typically a domain-}\n",
+    "\\text{dependent constant picked based on the application.}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/10_Ch_11_PCA_Apps/121-Apps.ipynb)\n"
    ]
   }
