dumped lec 21 and added content in lec 18

--- a/08_Ch_9_Symmetric_Matrices/104-Graph.ipynb
+++ b/08_Ch_9_Symmetric_Matrices/104-Graph.ipynb
@@ -7,7 +7,7 @@
     "---\n",
     "title: 9.4 Graph Theory - Introduction\n",
     "subject:  Symmetric Matrices\n",
-    "subtitle: \n",
+    "subtitle: evolution of multiple agents\n",
     "short_title: 9.4 Graph Theory - Introduction\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
@@ -50,6 +50,13 @@
     "- the formal definition of a graph and an example highlighting the key components\n",
     "- connectedness of graphs\n",
     "- the definition of different matrices used in graph theory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**TO DO**: NumPy examples "
    ]
   },
   {
