--- a/08_Ch_9_Symmetric_Matrices/105-Graph-consensus.ipynb
+++ b/08_Ch_9_Symmetric_Matrices/105-Graph-consensus.ipynb
@@ -7,7 +7,7 @@
     "---\n",
     "title: 9.4 Graph Theory - Consensus\n",
     "subject:  Symmetric Matrices\n",
-    "subtitle: \n",
+    "subtitle: convergence of agents' behavior\n",
     "short_title: 9.4 Graph Theory - Consensus\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
@@ -47,7 +47,14 @@
     "By the end of this page, you should know:\n",
     "- what is a consensus protocol\n",
     "- the consensus theorem\n",
-    "- "
+    "- how the eigenvalues/eigenvectors of the Laplacian matrix relate to consensus in a graph"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**TO DO**: NumPy examples "
    ]
   },
   {
