--- a/11_Ch_12_Optimization/131-Unconstrained.ipynb
+++ b/11_Ch_12_Optimization/131-Unconstrained.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "## Reading\n",
     "\n",
-    "Material related to this page, as well as additional exercises, can be\n",
+    "Material related to this page, as well as additional exercises, can be found in\n",
     "\n",
     "## Learning Objectives\n",
     "\n",
@@ -200,6 +200,91 @@
     "This is a quadratic function, with quadratic term given by the quadratic form\n",
     "$x^T A^TAx$, defined by the positive semidefinite matrix $A^TA$. This means that $f(x)$ is an\n",
     "upward pointing bowl with ellipsoidal level sets (recall from Lecture 16), and hence is convex"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A curious remark is in order: This argument is so general that the Hessian $\\nabla^2f(x)$ of a twice differentiable function $f:\\mathbb{R}^n\\to\\mathbb{R}$ which is twice positive semi-definite. This is the matrix/vector equivalent of saying that $f(x)=c^T x + b$ with $c$ is an upward pointing but if and only if $c=0$.\n",
+    "\n",
+    "If you don't remember what the Hessian $\\nabla^2f(x)$ of a function is, or how we computed $\\nabla^2f(x) = \\frac{\\partial^2f}{\\partial x_i\\partial x_j}$ in the above, don't worry, we'll review this in = 5.3.\n",
+    "\n",
+    "Which way is down?\n",
+    "\n",
+    "Let's assume that we are either in a \"nice\" setting where our objective function is convex (bowl shaped), or that we're happy to settle for a local minimum. How can we figure out which way is down so that we can tell our little ant friend which way they should walk to get somewhere lower? Let's start with functions with $x\\in\\mathbb{R}^2$ and look at some cost function contour plots.\n",
+    "\n",
+    "Let's start with two familiar examples:\n",
+    "\n",
+    "\\begin{itemize}\n",
+    "\\item $f(x) = ||x||^2 = x_1^2 + x_2^2$, which is nothing but the Euclidean norm squared of x, and\n",
+    "\\item $g(x) = ||x-b||^2 = (x_1-b_1)^2+(x_2-b_2)^2$, which is a very simple least squares objective with $A=I$.\n",
+    "\\end{itemize}\n",
+    "\n",
+    "We have plotted both of these functions, and their contour plots, below:\n",
+    "\n",
+    "[Image of 4 plots: 3D surface plots and contour plots for $f(x)$ and $g(x)$]\n",
+    "\n",
+    "The contour plots show the level sets of $f(x)$, which we've seen before. These are the sets $C_a = \\{x\\in\\mathbb{R}^2 | f(x)=a\\}$ for some constant a. Here, these end up as circles, where for example $C_1$ is the set of $x_1,x_2$ such that $x_1^2 + x_2^2 = 1$ or $(x_1-b_1)^2 + (x_2-b_2)^2 = 1$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Can we use these contour plots to identify which way is down if our ant is currently sitting at point $x\\in\\mathbb{R}^2$?\n",
+    "\n",
+    "To answer this question, we'll need the gradient $\\nabla f(x)$ of our function. Recall from Math 1410 that for a function $f:\\mathbb{R}^n\\to\\mathbb{R}$, its gradient $\\nabla f(x)$ is an n-vector of the partial derivatives of f:\n",
+    "\n",
+    "\\[\\nabla f(x) = \\begin{bmatrix}\n",
+    "\\frac{\\partial f}{\\partial x_1}(x) \\\\[6pt]\n",
+    "\\vdots \\\\[6pt]\n",
+    "\\frac{\\partial f}{\\partial x_n}(x)\n",
+    "\\end{bmatrix} \\in \\mathbb{R}^n\\]\n",
+    "\n",
+    "For our functions on $\\mathbb{R}^2$, this reduces to $\\nabla f(x) = (\\frac{\\partial f}{\\partial x_1}(x), \\frac{\\partial f}{\\partial x_2}(x)) \\in \\mathbb{R}^2$.\n",
+    "\n",
+    "In the figure below, we show contour plots for $f(x)=||x-b||^2=(x_1-3)^2+(x_2-3)^2$ and $f_2(x)=||Ax-b||^2$, along with the gradients $\\nabla f(x)$ (green arrows) at various points.\n",
+    "\n",
+    "[Image placeholder for contour plots with gradients]\n",
+    "\n",
+    "In both cases, the gradients are pointing in the direction of maximal increase. If we go in the opposite $-\\nabla f(x)$ direction, we will move in the direction of maximal decrease!\n",
+    "\n",
+    "Let's flex our calculus muscles a bit and compute the gradients of $f(x)$ and $f_2(x)$:\n",
+    "\n",
+    "\\[\\nabla f_1(x) = \\begin{bmatrix}\n",
+    "\\frac{\\partial}{\\partial x_1}((x_1-3)^2+(x_2-3)^2) \\\\[6pt]\n",
+    "\\frac{\\partial}{\\partial x_2}((x_1-3)^2+(x_2-3)^2)\n",
+    "\\end{bmatrix} = 2\\begin{bmatrix}\n",
+    "x_1-3 \\\\[6pt]\n",
+    "x_2-3\n",
+    "\\end{bmatrix}\\]\n",
+    "\n",
+    "[If you don't know how to compute this gradient, you may wish to review Math110 notes, but don't worry, we won't ask you to calculate gradients on the homework & exams]\n",
+    "\n",
+    "\\[\\nabla f_2(x) = \\nabla (Ax-b)^T(Ax-b) = 2A^T(Ax-b)\\]\n",
+    "\n",
+    "One thing you might notice in the plots above is that the red dots, which we placed on the function minimum, have no green arrows. This is because the gradient at these points $x^*$ is zero. In fact, this is true in general: a point $x^*$ is a local minimum only if $\\nabla f(x^*)=0$.\n",
+    "\n",
+    "We won't prove this, but intuitively, this makes sense: if $\\nabla f(x)\\neq 0$, then this means there is a direction $-\\nabla f(x)$ in which I could walk a little bit downhill to decrease $f(x)$, so $\\nabla f(x)$ must be zero if we're at a local minima. Let's check that this holds for $\\nabla f_1(x)$ and $\\nabla f_2(x)$ above:\n",
+    "\n",
+    "For $f_1(x)$, $x^* = (3,3)$, and $\\nabla f_1(x^*) = 2\\begin{bmatrix} x_1^*-3 \\\\ x_2^*-3 \\end{bmatrix} = \\mathbf{0}$, and so that checks out. And for $f_2(x)$, $x^* = (A^TA)^{-1}A^Tb$, and\n",
+    "\n",
+    "$\\nabla f_2(x^*) = 2(A^TAx^* - A^Tb) = 2(A^TA((A^TA)^{-1}A^Tb) - A^Tb) = 2(A^Tb - A^Tb) = \\mathbf{0}$!\n",
+    "\n",
+    "In general, while $\\nabla f(x^*) = \\mathbf{0}$ is necessary for $x^*$ to be a local minima, it is not sufficient, i.e., there may be certain points with $\\nabla f(x^*)=\\mathbf{0}$ that are not local minima. For example, all red dots in the plot below have vanishing gradients, but only two are minima:\n",
+    "\n",
+    "[Image of a function with multiple stationary points]\n",
+    "\n",
+    "However, if our function $f$ is convex (bowl shaped), we have the following theorem which tells us that walking downhill will always find a global minimum:\n",
+    "\n",
+    "Theorem: Let $f:\\mathbb{R}^n \\to \\mathbb{R}$ be convex. Then $x^*$ is globally optimal, i.e.,\n",
+    "\n",
+    "$f(x^*) \\leq f(x) \\quad \\forall x\\in\\mathbb{R}^n$\n",
+    "\n",
+    "if and only if $\\nabla f(x^*) = \\mathbf{0}$.\n",
+    "\n",
+    "Next, we'll use our new found insights to define gradient descent, a widely used iterative algorithm for finding local minima of optimization problems (P)."
    ]
   },
   {
